# CPP

./: .gitignore
Aufgabe.tex/: Getting started.tex
Ex3_Chrispens_Gahbiche/: .swp  CMakeLists.txt  Exercise 3.docx  main.cpp  ~$ercise 3.docx
Ex3_Chrispens_Gahbiche/Interfaces/: Quad.cpp  Quad.h
Ex3_Chrispens_Gahbiche/Shapes/: IsoscelesTrapezoid.cpp  IsoscelesTrapezoid.h  Kite.cpp  Kite.h  Parallelogram.cpp  Parallelogram.h  Quad3D.cpp  Quad3D.h  Quadrilateral.cpp  Quadrilateral.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  SpecializedRectangle.cpp  SpecializedRectangle.h  SpecializedSquare.cpp  SpecializedSquare.h  Square.cpp  Square.h  Trapezoid.cpp  Trapezoid.h
Ex4_Chrispens_Gahbiche/: CMakeLists.txt  Point.cpp  Point.h  Polygon.cpp  Polygon.h  main.cpp  sum_circumference.h  transform_reduce.h
Ex5_Chrispens_Gahbiche/: CMakeLists.txt  MulticastMutextTransport.h  atomics.h  main.cpp  mutex-example.cpp  producers_consumers.h
